# MathLib

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  GITHUB_PAGES_SETUP.md  README.md  RELEASE_GUIDE.md  build.sh  coverage.sh  main.cpp  rebuild.sh  run.sh  test.sh
.github/workflows/: build.yml  deploy-docs.yml
cmake/: MathLibConfig.cmake.in
inc/: Complex.hpp  DivByZeroError.hpp  IncompatibleSizeError.hpp  IndexOutOfRangeError.hpp  MathLibError.hpp  Matrix.hpp  Vector.hpp  compare.hpp  config.hpp  conversion.hpp  mathlib.hpp  rounding.hpp
inc/private/: macros.h
inc/public/: Complex.hpp  DivByZeroError.hpp  IndexOutOfRangeError.hpp  MathLibError.hpp  Vector2D.hpp  Vector3D.hpp  compare.hpp  config.hpp  conversion.hpp  mathlib.hpp  rounding.hpp
src/: Complex.cpp  Vector.cpp  Vector2D.cpp  Vector3D.cpp  compare.cpp  conversion.cpp  rounding.cpp
test/: Complex_test.cpp  Matrix_test.cpp  Vector2D_test.cpp  Vector3D_test.cpp  Vector_test.cpp  compare_test.cpp  conversion_test.cpp  rounding_test.cpp
